--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
+	<meta property="og:title" content="병호&선희 결혼식에 초대합니다.">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="/images/photo01.jpg">
+	<meta property="og:description" content="23년 12월 02일 토요일 14시 40분 삼산월드컨벤션 그랜드홀">
     
     <title>병호&선희 결혼식에 초대합니다.</title>
     <link rel="stylesheet" href="./css/scss/style.css">
