--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
             flakeIndex:1,
 			minSize:15,
 			maxSize:20,
+			maxSpeed:3,
+			minSpeed:1,
 			image :"/images/flower.png",
          })
     });
