--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="main-area">
             <div class="section-area">
                 <div class="section section01">
-					<div class="date wow fadeInUp">2023.12.02 토요일</div>
+					<div class="date wow fadeInUp">2023.12.02 토요일 14시 40분</div>
 					<div class="title wow fadeInUp"  data-wow-delay="0.3s">병호 & 선희</div>
 					<div class="subtitle wow fadeInUp"  data-wow-delay="0.6s">Wedding Day</div>
 					<div class="adress wow fadeInUp" data-wow-delay="0.9s">삼산월드컨벤션 그랜드홀</div>
@@ -202,7 +202,7 @@
             flakeIndex:1,
 			minSize:15,
 			maxSize:20,
-			maxSpeed:3,
+			maxSpeed:1,
 			minSpeed:1,
 			image :"/images/flower.png",
          })
