--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 	const now = new Date();
 	const distance = dday - now;
 	const d = Math.floor(distance / (1000 * 60 * 60 * 24));
-	$('.section06 .text span').html(d + '일');
+	$('.section06 .text span').html(d + 1 + '일');
 
 </script>
 </html>
