--- a/index.html
+++ b/index.html
@@ -198,12 +198,13 @@
 	
 	
     $(document).ready(function(){
-        $(document).snowfall({
+        $('.section').snowfall({
             flakeIndex:1,
 			minSize:15,
 			maxSize:20,
 			maxSpeed:1,
 			minSpeed:1,
+			flakeCount : 2,
 			image :"/images/flower.png",
          })
     });
